set pandas float format to take care of floats

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -2395,10 +2395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# set pandas float format to 3 D.P to take care of the exponentials\n",
+    "pd.set_option('display.float_format', lambda x: '% 3f' % x)"
+   ]
   },
   {
    "cell_type": "code",
