make pipeline with Lasso regression

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3498,10 +3498,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                ('lasso', Lasso(random_state=123))])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating  model pipeline(s)\n",
+    "\n",
+    "# import required libraries\n",
+    "\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "# import standardisation tool\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# import models\n",
+    "\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.linear_model import ElasticNet\n",
+    "\n",
+    "# create pipeline with Lasso\n",
+    "make_pipeline(StandardScaler(), Lasso(random_state=123))\n"
+   ]
   },
   {
    "cell_type": "code",
