make pipeline dictionary

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3535,6 +3535,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store pipeline in dictionary\n",
+    "\n",
+    "pipeline = {\n",
+    "    'lasso': make_pipeline(StandardScaler(), Lasso(random_state=123)),\n",
+    "    'ridge': make_pipeline(StandardScaler(), Ridge(random_state=123))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
