add elasticnet model pipeline

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3549,10 +3549,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add another model on the fly\n",
+    "\n",
+    "pipeline['enet'] = make_pipeline(StandardScaler(), ElasticNet(random_state=123))"
+   ]
   },
   {
    "cell_type": "markdown",
