List tunable hyperparameters for Lasso pipeline using get_params

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3567,6 +3567,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'memory': None,\n",
+       " 'steps': [('standardscaler', StandardScaler()),\n",
+       "  ('lasso', Lasso(random_state=123))],\n",
+       " 'verbose': False,\n",
+       " 'standardscaler': StandardScaler(),\n",
+       " 'lasso': Lasso(random_state=123),\n",
+       " 'standardscaler__copy': True,\n",
+       " 'standardscaler__with_mean': True,\n",
+       " 'standardscaler__with_std': True,\n",
+       " 'lasso__alpha': 1.0,\n",
+       " 'lasso__copy_X': True,\n",
+       " 'lasso__fit_intercept': True,\n",
+       " 'lasso__max_iter': 1000,\n",
+       " 'lasso__normalize': False,\n",
+       " 'lasso__positive': False,\n",
+       " 'lasso__precompute': False,\n",
+       " 'lasso__random_state': 123,\n",
+       " 'lasso__selection': 'cyclic',\n",
+       " 'lasso__tol': 0.0001,\n",
+       " 'lasso__warm_start': False}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List tunable hyperparameters for Lasso pipeline created above\n",
+    "\n",
+    "pipeline['lasso'].get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
