declare alpha hyperparameter for Lasso and Ridge regression models

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3615,10 +3615,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# How to declare alpha hyperparameter in Lasso and Ridge regression \n",
+    "\n",
+    "lasso_params = {\n",
+    "    'lasso__alpha' : [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10]\n",
+    "}\n",
+    "\n",
+    "ridge_params = {\n",
+    "    'ridge__alpha' : [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10]\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
