compile all hyperparameter grids into a single dictionary

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3646,6 +3646,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compile all hyperparameter grids into a single dictionary, similar to the one for pipelines.\n",
+    "\n",
+    "hyperparameters = {\n",
+    "    'lasso': lasso_params,\n",
+    "    'ridge': ridge_params,\n",
+    "    'enet' : enet_params\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
