import helper for cross validation

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3664,7 +3664,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import Helper for cross validation\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
