create cross-validation object from Lasso pipeline and Lasso hyperparameters

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3661,22 +3661,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Helper for cross validation\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "\n"
+    "\n",
+    "# Create cross-validation object from Lasso pipeline and Lasso hyperparameters\n",
+    "model_lasso = GridSearchCV(pipeline['lasso'], hyperparameters['lasso'], cv=10, n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sklearn.model_selection._search.GridSearchCV"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(model_lasso)"
+   ]
   },
   {
    "cell_type": "code",
