handle warnings which may come from fitting the train test dataset to the cross validation

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -3690,15 +3690,23 @@
     }
    ],
    "source": [
+    "# check model type\n",
     "type(model_lasso)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# handle convergence warning\n",
+    "\n",
+    "import warnings\n",
+    "from sklearn.exceptions import ConvergenceWarning\n",
+    "\n",
+    "warnings.simplefilter(action='ignore', category=ConvergenceWarning)"
+   ]
   },
   {
    "cell_type": "code",
