evaluate model cross-validated performance on training set

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -4394,10 +4394,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lasso 0.3086275110508402\n",
+      "ridge 0.31661115859856503\n",
+      "enet 0.34287462866116075\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate model by looking at cross-validated performance on the training set.\n",
+    "for name, model in fitted_model.items():\n",
+    "    print(name, model.best_score_)"
+   ]
   },
   {
    "cell_type": "code",
