predict test set for lasso

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -4415,6 +4415,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=10,\n",
+       "             estimator=Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                                       ('lasso', Lasso(random_state=123))]),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid={'lasso__alpha': [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1,\n",
+       "                                          5, 10]})"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check how fitted models perform on the test set!\n",
+    "\n",
+    "fitted_model['lasso']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predict the test set\n",
+    "\n",
+    "pred = fitted_model['lasso'].predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
