--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -4453,10 +4453,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 : 0.4088862476281637\n",
+      "MAE : 85035.54256465772\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scoring the prediction\n",
+    "\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error\n",
+    "\n",
+    "# Calculate and print R^2 and MAE\n",
+    "\n",
+    "print('R^2 :', r2_score(y_test, pred) )\n",
+    "print('MAE :', mean_absolute_error(y_test, pred) )"
+   ]
   },
   {
    "cell_type": "code",
