--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -4931,10 +4931,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# split data into x_train, y_train, x_test, y_test\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X,Y, random_state=1234, test_size=0.2)"
+   ]
   },
   {
    "cell_type": "code",
