complete overview exercise

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -4969,10 +4969,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                ('ridge', Ridge(random_state=123))])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline = {\n",
+    "    \"ridge\" : make_pipeline(StandardScaler(), Ridge(random_state=123))\n",
+    "}\n",
+    "\n",
+    "\n",
+    "make_pipeline(StandardScaler(), Ridge(random_state=123))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4996,10 +5015,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1, 0.3, 0.5, 0.7, 0.9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "elastic_params = {\n",
+    "    'elastic__l1_ratio': [0.1, 0.3, 0.5, 0.7, 0.9],\n",
+    "    'elastic__alpha': [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10]\n",
+    "}\n",
+    "\n",
+    "print(elastic_params['elastic__l1_ratio'])"
+   ]
   },
   {
    "cell_type": "markdown",
