display standardisation parameters for the beds feature in x_train

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5041,12 +5041,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 3.434228187919463 \n",
+      "Standard Deviation: 1.0729140858452646\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('Mean: {}'.format(x_train['beds'].mean()), '\\n' 'Standard Deviation: {}'.format(x_train['beds'].std()))"
+   ]
   },
   {
    "cell_type": "markdown",
