--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5080,10 +5080,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1689    1.459364\n",
+       "1531    0.527323\n",
+       "668    -0.404719\n",
+       "1740    1.459364\n",
+       "117    -1.336760\n",
+       "Name: beds, dtype: float64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_x = (x_train['beds'].head() - x_train['beds'].mean()) / x_train['beds'].std()\n",
+    "test_x"
+   ]
   },
   {
    "cell_type": "markdown",
