change variable name

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5100,8 +5100,8 @@
     }
    ],
    "source": [
-    "test_x = (x_train['beds'].head() - x_train['beds'].mean()) / x_train['beds'].std()\n",
-    "test_x"
+    "train_x = (x_train['beds'].head() - x_train['beds'].mean()) / x_train['beds'].std()\n",
+    "train_x"
    ]
   },
   {
