standardize first 5 observations from the beds feature in the TEST set.

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5080,21 +5080,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1689    1.459364\n",
-       "1531    0.527323\n",
-       "668    -0.404719\n",
-       "1740    1.459364\n",
-       "117    -1.336760\n",
+       "266   -1.336760\n",
+       "790   -0.404719\n",
+       "222   -1.336760\n",
+       "220   -1.336760\n",
+       "920   -0.404719\n",
        "Name: beds, dtype: float64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5128,10 +5128,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "266   -1.336760\n",
+       "790   -0.404719\n",
+       "222   -1.336760\n",
+       "220   -1.336760\n",
+       "920   -0.404719\n",
+       "Name: beds, dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_x = ( x_test['beds'].head() - x_train['beds'].mean()) / x_train['beds'].std()\n",
+    "test_x"
+   ]
   },
   {
    "cell_type": "markdown",
