display the preprocessing parameters directly from the scaler object.

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5215,10 +5215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 3.434228187919463 \n",
+      "Standard Deviation: 1.0725539871320342\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('Mean: {}'.format(scaler.mean_[0]), '\\n' 'Standard Deviation: {}'.format(scaler.scale_[0]))"
+   ]
   },
   {
    "cell_type": "markdown",
