use scaler to transform test set

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5252,10 +5252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test_new = scaler.transform(x_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5268,10 +5270,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(373, 39)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(X_test_new))\n",
+    "\n",
+    "print(X_test_new.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
