display the first 5 transformed values for the beds feature

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5316,10 +5316,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.33720839 -0.40485439 -1.33720839 -1.33720839 -0.40485439]\n",
+      "[[-1.33720839]\n",
+      " [-0.40485439]\n",
+      " [-1.33720839]\n",
+      " [-1.33720839]\n",
+      " [-0.40485439]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test_new[:5,0])\n",
+    "print(X_test_new[:5,:1])"
+   ]
   },
   {
    "cell_type": "markdown",
