create pipeline for random forest and gradient boosting regressor

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5374,10 +5374,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipeline['rf'] = make_pipeline(StandardScaler(), RandomForestRegressor(random_state=123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline['gb'] = make_pipeline(StandardScaler(), GradientBoostingRegressor(random_state=123))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5388,10 +5399,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+       "                ('randomforestregressor',\n",
+       "                 RandomForestRegressor(random_state=123))])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline['rf']"
+   ]
   },
   {
    "cell_type": "markdown",
