check that the model pipelines are of the correct type

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5483,10 +5483,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ridge <class 'sklearn.pipeline.Pipeline'>\n",
+      "rf <class 'sklearn.pipeline.Pipeline'>\n",
+      "gb <class 'sklearn.pipeline.Pipeline'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, values in pipeline.items():\n",
+    "    print(key, type(values))"
+   ]
   },
   {
    "cell_type": "markdown",
