declare hyperparameter grid for random forest regressor

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5557,10 +5557,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rf_params = {\n",
+    "    'randomforestregressor_nestimators': [100, 200],\n",
+    "    'randomforestregressor__max_features': ['auto', 'sqrt', 0.33]\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
