--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5582,10 +5582,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gb_params = {\n",
+    "    'gradientboostingregressor_nestimators': [100, 200],\n",
+    "    'gradientboostingregressor__learning_rate': [0.05, 0.1, 0.2],\n",
+    "    'gradientboostingregressor__max_depth': [1, 3, 5]\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
