create hyperparameters dictionary

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5609,10 +5609,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hyperparameters = {\n",
+    "    'lasso': lasso_params,\n",
+    "    'ridge': ridge_params,\n",
+    "    'enet' : enet_params,\n",
+    "    'rf': rf_params,\n",
+    "    'gb': gb_params\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
