check parameter setup

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5631,9 +5631,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enet was found in hyperparameters, and it is a grid.\n",
+      "gb was found in hyperparameters, and it is a grid.\n",
+      "ridge was found in hyperparameters, and it is a grid.\n",
+      "rf was found in hyperparameters, and it is a grid.\n",
+      "lasso was found in hyperparameters, and it is a grid.\n"
+     ]
+    }
+   ],
    "source": [
     "for key in ['enet', 'gb', 'ridge', 'rf', 'lasso']:\n",
     "    if key in hyperparameters:\n",
