check  models are of the correct type

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5700,10 +5700,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lasso <class 'sklearn.model_selection._search.GridSearchCV'>\n",
+      "ridge <class 'sklearn.model_selection._search.GridSearchCV'>\n",
+      "enet <class 'sklearn.model_selection._search.GridSearchCV'>\n",
+      "rf <class 'sklearn.model_selection._search.GridSearchCV'>\n",
+      "gb <class 'sklearn.model_selection._search.GridSearchCV'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in fit_model.items():\n",
+    "    print(key, type(value))"
+   ]
   },
   {
    "cell_type": "markdown",
