check  that model has been fitted properly

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5743,15 +5743,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lasso has been fitted.\n",
+      "ridge has been fitted.\n",
+      "enet has been fitted.\n",
+      "rf has been fitted.\n",
+      "gb has been fitted.\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.exceptions import NotFittedError\n",
     "\n",
-    "for name, model in fitted_models.items():\n",
+    "for name, model in fit_model.items():\n",
     "    try:\n",
-    "        pred = model.predict(X_test)\n",
+    "        pred = model.predict(x_test)\n",
     "        print(name, 'has been fitted.')\n",
     "    except NotFittedError as e:\n",
     "        print(repr(e))"
