display cross-validated training performance for each model in fit_model

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5801,11 +5801,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lasso 0.3086275110508402\n",
+      "ridge 0.31661115859856503\n",
+      "enet 0.34287462866116075\n",
+      "rf 0.48052493948124625\n",
+      "gb 0.48815067422416847\n"
+     ]
+    }
+   ],
    "source": [
-    "for name, model in fitted_model.items():\n",
+    "for name, model in fit_model.items():\n",
     "    print(name, model.best_score_)"
    ]
   },
