print performance of each model in fit_model on the test set

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -5856,10 +5856,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lasso \n",
+      "--------\n",
+      "R^2: 0.4088862476281637 \n",
+      "MAE: 85035.54256465772 \n",
+      "\n",
+      "ridge \n",
+      "--------\n",
+      "R^2: 0.4093396476329718 \n",
+      "MAE: 84978.03564808935 \n",
+      "\n",
+      "enet \n",
+      "--------\n",
+      "R^2: 0.4052451373126301 \n",
+      "MAE: 86298.63725254669 \n",
+      "\n",
+      "rf \n",
+      "--------\n",
+      "R^2: 0.5710019128514657 \n",
+      "MAE: 67900.87068364612 \n",
+      "\n",
+      "gb \n",
+      "--------\n",
+      "R^2: 0.5269037813440294 \n",
+      "MAE: 71135.14693585342 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, model in fit_model.items():\n",
+    "    pred = fit_model[name].predict(x_test)\n",
+    "    print(name, '\\n' '--------')\n",
+    "    print('R^2:', r2_score(y_test, pred), '\\n' 'MAE:', mean_absolute_error(y_test, pred), '\\n')"
+   ]
   },
   {
    "cell_type": "markdown",
