--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -6021,10 +6021,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'sklearn.model_selection._search.GridSearchCV'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(fit_model['rf']))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6050,10 +6060,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sklearn.pipeline.Pipeline"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(fit_model['rf'].best_estimator_)"
+   ]
   },
   {
    "cell_type": "markdown",
