save winning  model using pickle

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -6097,10 +6097,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline(steps=[('standardscaler', StandardScaler()),\n",
+      "                ('randomforestregressor',\n",
+      "                 RandomForestRegressor(n_estimators=200, random_state=123))])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fit_model['rf'].best_estimator_)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6144,10 +6156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('final_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(fit_model['rf'].best_estimator_, f)"
+   ]
   },
   {
    "cell_type": "markdown",
